--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+div {
+  margin: 0;
+  padding: 0;
+}
+
